# Ai-Novel-Editor

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  _version.py  main.py
src/core/: __init__.py  advanced_prompt_engine.py  ai_client.py  ai_qt_client.py  auto_replace.py  builtin_templates.py  chinese_segmentation.py  codex_integrator.py  codex_manager.py  concept_detector.py  concepts.py  concurrent_io.py  config.py  content_extractor.py  context_generator.py  context_injector.py  context_variables.py  database_manager.py  enhanced_reference_detector.py  export_manager.py  import_export_engine.py  import_manager.py  improved_context_extractor.py  intelligent_context_collector.py  log.py  metadata_extractor.py  multimodal_test.py  multimodal_types.py  multimodal_usage_example.py  nlp_analyzer.py  optimized_entity_detector.py  outline_converter.py  outline_enhancer.py  outline_parser.py  outline_prompts.py  project.py  (+23 more)
tests/: debug_token_config.py  test_2025_api_fixes.py  test_2025_fixes_simple.py  test_codex_integrator.py  test_entity_detection_scenarios.py  test_esc_key_handling.py  test_esc_key_handling_analysis.py  test_fixes_core_logic.py  test_gemini_fix.py  test_ghost_text_esc_key_handling.py  test_ghost_text_initialization.py  test_ghost_text_state_manager.py  test_improved_context_extractor.py  test_intelligent_context_collector.py  test_native_api_simple.py  test_native_api_support.py  test_optimized_entity_detector.py  test_rag_integrator.py  test_tab_esc_ghost_text.py  test_template_processor.py  test_timeout_fix.py
(+92 files in other folders)
